--- a/.gitignore
+++ b/.gitignore
@@ -37,16 +37,23 @@ step4_hef_compilation/_compile_temp.py
 step3_onnx_export/*.onnx
 step3_onnx_export/*.onnx.json
 
-# Datasets (comment out if you want to commit small datasets)
-*.jpg
-*.jpeg
-*.png
-*.JPG
-*.JPEG
-*.PNG
+# Datasets - only ignore in specific directories
+datasets/**/*.jpg
+datasets/**/*.jpeg
+datasets/**/*.png
+datasets/**/*.JPG
+datasets/**/*.JPEG
+datasets/**/*.PNG
+captured_images/**/*.jpg
+captured_images/**/*.jpeg
+captured_images/**/*.png
 
-# Labels (comment out if you want to commit annotations)
-*.txt
+# YOLO labels - only ignore in datasets
+datasets/**/*.txt
+
+# Test results
+step5_raspberry_pi_testing/test_results/**/*.jpg
+step5_raspberry_pi_testing/test_results/**/*.png
 
 # Editor
 .vscode/
